# ExersizeParallelAndSequentualC

./: .travis.yml  CMakeLists.txt  FileHelper.h  ParallelRealisation.h  README.md  SequentualRealisation.h  TestFileHelper.c  TestRealisations.c  builder.bat  builder.sh  main.c  test_file_helper.c  test_realisations.c
TestFiles/: test3.txt
Test_Files/: test1.txt  test2.txt
Tests/: TestFileHelper.c  TestRealisations.c
lib/: CMakeLists.txt  FileHelper.c  ParallelRealisation.c  ParallelRealisation.h  SequentualRealisation.c  SequentualRealisation.h  file_helper.c  file_helper.h  parallel_realisation.c  parallel_realisation.h  sequentual_realisation.c  sequentual_realisation.h
